# job-posting-bot

./: .env.testing_example  .gitignore  README.md  config.yaml  pyproject.toml  testing_config.yaml
.github/workflows/: jobbot.yml
docs/: system_design.md
launchd/: com.jobbot.plist.example
scripts/: run_jobbot.sh
src/jobbot/: __init__.py  cli.py  config.py  models.py  orchestrator.py  parsers.py  query_builder.py  scoring.py  telegram.py  utils.py
src/jobbot/adapters/: base.py  linkedin.py
src/jobbot/services/: browser.py
src/jobbot/storage/: sqlite_store.py
tests/: test_parsers.py  test_scoring.py  test_storage.py
